publishing is not the bottleneck, it's the data_rate

--- a/config.example.ini
+++ b/config.example.ini
@@ -14,14 +14,6 @@ ir_led=A
 
 [stirring]
 
-
-[gli2]
-ir_led_X=
-ir_led_Y=
-pd_X=
-pd_Y=
-
-
 [od_config.photodiode_channel]
 # Default photodiode channel to use, with it's angle relative to the IR LED.
 # Only allowable channels are one of {0,1,2,3}
@@ -30,7 +22,11 @@ pd_Y=
 od_angle_channel=135,0|135,1
 
 [od_config.od_sampling]
+# how many samples should the ADC publish per second?
 samples_per_second=0.2
+
+# how fast should we sample the ADC? See ADS1x15 datasheet
+data_rate=8
 
 [bioreactor]
 # obviously changing this isn't going to change the size of the glass
@@ -104,6 +100,14 @@ Kd=0
 Kp=3
 Ki=0.1
 Kd=0.1
+
+
+[gli2]
+ir_led_X=
+ir_led_Y=
+pd_X=
+pd_Y=
+
 
 [growth_rate_kalman]
 # this controls the variance in the rate position Q matrix. Higher values => more sensitive rate.
