adding timezone support

--- a/config.example.ini
+++ b/config.example.ini
@@ -63,6 +63,7 @@ leader_address=
 [ui]
 # the UI will be available at the below alias, along with <leader_hostname>.local
 # note - it must end in .local, and subdomains are not allowed.
+# requires a reboot after changing.
 url_alias=pioreactor.local
 
 
@@ -119,7 +120,12 @@ od_variance=0.005
 [error_reporting]
 # This enables sending error logs back to us developers at Pioreactor. We can build a better
 # product with this enabled (switch to 1 to enable sending, 0 to disable any sending)
-send_to_Pioreactor_com=0
+send_to_Pioreactor_dot_com=0
+
+[timezone]
+# One of "TZ database name" in https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
+# this requires a power cycle after changing to set.
+timezone=Europe/London
 
 [remote]
 # see docs at
