dynamic stirring between ADC readings

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -31,7 +31,11 @@ duty_cycle_testing_unit=50
 od_angle_channel=135,0
 
 [od_config.od_sampling]
+# how many samples should the ADC publish per second?
 samples_per_second=0.2
+
+# how fast should we sample the ADC? See ADS1x15 datasheet
+data_rate=8
 
 
 [storage]
