ir_led intensity to config

--- a/config.example.ini
+++ b/config.example.ini
@@ -28,6 +28,9 @@ samples_per_second=0.2
 # how fast should we sample the ADC? See ADS1x15 datasheet
 data_rate=8
 
+# default intensity of IR LED. Integer between 0 and 100
+ir_intensity = 100
+
 [bioreactor]
 # obviously changing this isn't going to change the size of the glass
 # vial, but if you wanted to create a new, larger, bioreactor...
@@ -51,6 +54,9 @@ ui_log_level=INFO
 # should be a hostname defined on the network
 # See docs: https://github.com/Pioreactor/pioreactor/wiki/Leaders,-workers-and-inventory
 leader_hostname=
+
+# something like: leadername.local
+# this can be an IP address, too.
 leader_address=
 
 [network.inventory]
