remove _unit from duty cycle and pump calibrtion

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -17,15 +17,15 @@ pd_B=1
 
 
 [pump_calibration]
-media_ml_calibration_testing_unit={"duration_": 1}
-waste_ml_calibration_testing_unit={"duration_": 1}
-alt_media_ml_calibration_testing_unit={"duration_": 1}
+media_ml_calibration={"duration_": 1}
+waste_ml_calibration={"duration_": 1}
+alt_media_ml_calibration={"duration_": 1}
 
 [bioreactor]
 volume_ml=14
 
 [stirring]
-duty_cycle_testing_unit=50
+duty_cycle=50
 
 [od_config.photodiode_channel]
 od_angle_channel=135,0
