clean up some CLI prints and exit code

--- a/config.example.ini
+++ b/config.example.ini
@@ -8,6 +8,7 @@ waste=3
 media=4
 
 [leds]
+# add labels to to the UI, and access specific LEDs programmaticly, ex: red=B or uv380=C
 ir_led=A
 
 [pump_calibration]
@@ -23,13 +24,13 @@ od_angle_channel=135,0|135,1
 
 [od_config.od_sampling]
 # how many samples should the ADC publish per second?
-samples_per_second=0.1
+samples_per_second=0.125
 
 # how fast should we sample the ADC? See ADS1x15 datasheet
 data_rate=8
 
 # default intensity of IR LED. Integer between 0 and 100
-ir_intensity = 90
+ir_intensity = 95
 
 
 [bioreactor]
