small error in make

--- a/config.example.ini
+++ b/config.example.ini
@@ -99,6 +99,7 @@ event_logs=1
 [ui.rename]
 # rename the units in the UI
 # ideally 10 or fewer characters to show up well in the chart legend
+# note that this won't change naming in data exports.
 
 [pid_morbidostat]
 Kp=5
@@ -136,5 +137,5 @@ send_to_Pioreactor_dot_com=0
 timezone=Europe/London
 
 [remote]
-# see docs at
+# see docs at https://pioreactor.com/pages/Setting-up-remote-access-to-PioreactorUI
 ws_url=
