--- a/config.example.ini
+++ b/config.example.ini
@@ -123,7 +123,8 @@ pd_Y=
 # this controls the variance in the rate position Q matrix. Higher values => more sensitive rate.
 rate_variance=0.0050
 # this controls the variance in all the OD positions in the Q matrix. Higher values => less confidence in observations (i.e. we expects lots of noise)
-od_variance=0.005
+od_variance=0.0050
+obs_variance=100
 
 
 [error_reporting]
