update logs table to have new columns to make it easier to filter; this is part of have the UI logs table be backed by SQL instead of a file. We needed to make some changes all round, but I think it's better

--- a/requirements/requirements_worker.txt
+++ b/requirements/requirements_worker.txt
@@ -1,3 +1,7 @@
 -r requirements.txt
+adafruit-circuitpython-ads1x15
+simple-pid
 RPi.GPIO
 DAC43608
+
+# numpy as well, but that's installed elsewhere
