move some ADC pieces around

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -47,7 +47,7 @@ log_file=./pioreactor.log
 
 # logs in MQTT end up in the database and on the UI
 # See Python's logging module for possible values
-mqtt_log_level=INFO
+mqtt_log_level=DEBUG
 ui_log_level=INFO
 
 [network.topology]
