rm time_series_agg

--- a/config.example.ini
+++ b/config.example.ini
@@ -76,11 +76,8 @@ url_alias=pioreactor.local
 
 
 [ui.overview.settings]
-# changing these may require a power cycle of the leader unit.
-# (specifically, restart the time_series_aggregating job)
-filtered_od_lookback_minutes=10000
-raw_od_lookback_minutes=10000
-log_display_count=65
+filtered_od_lookback_hours=6
+raw_od_lookback_hours=6
 
 [ui.overview.charts]
 # show/hide charts on the PioreactorUI dashboard
