add more debugging

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -45,9 +45,8 @@ database=pioreactor.sqlite3
 [logging]
 log_file=./pioreactor.log
 
-# logs in MQTT end up in the database and on the UI
 # See Python's logging module for possible values
-mqtt_log_level=DEBUG
+#TODO: move this to another section
 ui_log_level=INFO
 
 [network.topology]
