add more computer metrics

--- a/config.example.ini
+++ b/config.example.ini
@@ -117,11 +117,9 @@ pd_Y=
 
 
 [growth_rate_kalman]
-# this controls the variance in the rate position Q matrix. Higher values => more sensitive rate.
-rate_variance=0.01
-# this controls the variance in all the OD positions in the Q matrix. Higher values => less confidence in observations (i.e. we expects lots of noise)
-od_variance=0.005
-obs_variance=10
+rate_variance=0.0005
+acc_variance=0.01
+obs_variance=0.0001
 
 
 [error_reporting]
