don't readd logging handlers

--- a/config.example.ini
+++ b/config.example.ini
@@ -118,8 +118,8 @@ pd_Y=
 
 [growth_rate_kalman]
 rate_variance=0.0005
-acc_variance=0.01
-obs_variance=0.0001
+acc_variance=0.001
+obs_variance=5e-5
 
 
 [error_reporting]
