revert adding acc term - it wasn't working

--- a/config.example.ini
+++ b/config.example.ini
@@ -117,9 +117,9 @@ pd_Y=
 
 
 [growth_rate_kalman]
-rate_variance=0.0005
-acc_variance=0.001
-obs_variance=5e-5
+rate_variance=0.01
+# lower obs_variance to make the growth rate more sensitive
+obs_variance=0.002
 
 
 [error_reporting]
