--- a/config.example.ini
+++ b/config.example.ini
@@ -8,7 +8,7 @@ waste=3
 media=4
 
 [leds]
-# add labels to to the UI, and access specific LEDs programmaticly, ex: red=B or uv380=C
+# add labels in the UI, and access specific LEDs programmaticly. Ex: red=B or uv380=C
 ir_led=A
 
 [pump_calibration]
@@ -130,7 +130,7 @@ send_to_Pioreactor_dot_com=0
 [timezone]
 # One of "TZ database name" in https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
 # this requires a power cycle after changing to set.
-timezone=Europe/London
+timezone=Etc/GMT
 
 [remote]
 # see docs at https://pioreactor.com/pages/Setting-up-remote-access-to-PioreactorUI
