add back acc term

--- a/config.example.ini
+++ b/config.example.ini
@@ -117,9 +117,9 @@ pd_Y=
 
 
 [growth_rate_kalman]
-rate_variance=0.022
+acc_variance=0.005
 # lower obs_variance to make the growth rate more sensitive
-obs_variance=0.0022
+obs_variance=0.0005
 
 
 [error_reporting]
