--- a/config.example.ini
+++ b/config.example.ini
@@ -117,8 +117,8 @@ pd_Y=
 
 
 [growth_rate_kalman]
+# lower acc_variance to make the growth rate less sensitive
 acc_variance=0.006
-# lower obs_variance to make the growth rate more sensitive
 obs_variance=0.0005
 
 
