adding temperature controller job

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -3,6 +3,7 @@
 stirring=0
 alt_media=2
 waste=3
+heating=1
 media=4
 
 [leds]
@@ -14,6 +15,9 @@ white_light=B
 pd_A=0
 pd_B=1
 
+
+[temperature_config.sampling]
+samples_per_second=0.1
 
 
 [pump_calibration]
@@ -67,15 +71,21 @@ log_display_count=65
 pioreactor1=experiment
 pioreactor2=control
 
-[pid_morbidostat]
+[dosing_automation.pid_morbidostat]
 Kp=5
 Ki=0
 Kd=0
 
-[pid_turbidostat]
-Kp=1
-Ki=1
-Kd=1
+[dosing_automation.pid_turbidostat]
+Kp=3
+Ki=0.1
+Kd=0.1
+
+[temperature_automation.pid_stable]
+Kp=.01
+Ki=.01
+Kd=.01
+
 
 [growth_rate_kalman]
 rate_variance=0.0005
