--- a/config.example.ini
+++ b/config.example.ini
@@ -3,6 +3,7 @@
 [PWM]
 # map the externals to the PWM
 stirring=0
+heating=1
 alt_media=2
 waste=3
 media=4
@@ -24,7 +25,7 @@ od_angle_channel=135,0|135,1
 
 [od_config.od_sampling]
 # how many samples should the ADC publish per second?
-samples_per_second=0.1
+samples_per_second=0.2
 
 # how fast should we sample the ADC? See ADS1x15 datasheet
 data_rate=8
@@ -32,6 +33,9 @@ data_rate=8
 # default intensity of IR LED. Integer between 0 and 100
 ir_intensity = 95
 
+
+[temperature_config.sampling]
+samples_per_second=0.1
 
 [bioreactor]
 # obviously changing this isn't going to change the size of the glass
@@ -98,15 +102,21 @@ event_logs=1
 # ideally 10 or fewer characters to show up well in the chart legend
 # note that this won't change naming in data exports.
 
-[pid_morbidostat]
+[dosing_automation.pid_morbidostat]
 Kp=5
 Ki=0
 Kd=0
 
-[pid_turbidostat]
+[dosing_automation.pid_turbidostat]
 Kp=3
 Ki=0.1
 Kd=0.1
+
+[temperature_automation.pid_stable]
+Kp=3
+Ki=0.1
+Kd=0.1
+
 
 
 [gli2]
