fix idemponent bug in streaming

--- a/config.example.ini
+++ b/config.example.ini
@@ -90,6 +90,7 @@ implied_growth_rate=1
 fraction_of_volume_that_is_alternative_media=0
 normalized_optical_density=1
 raw_optical_density=1
+temperature=1
 
 [ui.overview.cards]
 # show/hide cards on the PioreactorUI dashboard
