--- a/startup/systemd/start_pioreactorui.service
+++ b/startup/systemd/start_pioreactorui.service
@@ -6,7 +6,7 @@ After=network-online.target
 [Service]
 User=pi
 ExecStartPre=sudo iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-ports 9000
-ExecStart=pm2 start app.js --name ui --time
+ExecStart=pm2 start app.js --name ui
 ExecStartPost=nohup sudo sh /home/pi/pioreactor/bash_scripts/push_ui_logs_to_mqtt.sh &
 WorkingDirectory=/home/pi/pioreactorui/backend
 Restart=no
