start of a plugin system

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -5,11 +5,15 @@ alt_media=2
 waste=3
 heating=1
 media=4
+bubbler=2
 
 [leds]
 ir_led=A
 white_light=B
 
+
+[bubbler]
+duty_cycle=10
 
 [pd_inputs]
 pd_A=0
