--- a/startup/systemd/pioreactor_startup@.service
+++ b/startup/systemd/pioreactor_startup@.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=In case of an RPi power-cycle, start up %I.
+Description=Start up %I on boot.
 Wants=network-online.target
 After=network-online.target
 
 [Service]
 User=pi
-ExecStart=pio run %I
+ExecStart=pio run-always %I
 Restart=no
 Environment="PATH=/home/pi/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin"
 KillMode=none
