improved pio version; adding coverted timestamp cols to data exports

--- a/config.example.ini
+++ b/config.example.ini
@@ -44,7 +44,7 @@ volume_ml=14
 
 [storage]
 # the UI looks here, too.
-database=/home/pi/db/pioreactor.sqlite
+database=/home/pi/.pioreactor/pioreactor.sqlite
 
 [logging]
 # where, on each Rpi, to store the logs
