fix available mem; abstract out hardware pwm to it's own lib

--- a/requirements/requirements_worker.txt
+++ b/requirements/requirements_worker.txt
@@ -1,7 +1,8 @@
 -r requirements.txt
+RPi.GPIO
 adafruit-circuitpython-ads1x15
 simple-pid
-RPi.GPIO
 DAC43608
+rpi-hardware-pwm
 
 # numpy as well, but that's installed elsewhere
