--- a/config.example.ini
+++ b/config.example.ini
@@ -1,7 +1,8 @@
 # See documentation for this file at https://pioreactor.com/pages/configuration-via-config-ini
 
 [PWM]
-# map the externals to the PWM
+# map the externals to the PWM.
+# hardware PWM are available on channels 1 & 3.
 stirring=0
 heating=1
 alt_media=2
