--- a/config.example.ini
+++ b/config.example.ini
@@ -14,15 +14,19 @@ media=4
 ir_led=A
 
 [pump_calibration]
+media_ml_calibration={"duration_": 1.0}
+waste_ml_calibration={"duration_": 1.0}
+alt_media_ml_calibration={"duration_": 1.0}
 
 [stirring]
 
 [od_config.photodiode_channel]
-# Default photodiode channel to use, with it's angle relative to the IR LED.
-# Only allowable channels are one of {0,1,2,3}
+# Default photodiode channel to use, with its angle relative to the IR LED.
 # Only valid angles are one of {45,90,135,180}
-# Use a | character to separate them, ex: 135,0|135,1
-od_angle_channel=135,0|135,1
+# Only allowable channels are one of {0,1}
+# Use a | character to separate them
+# Example: 135,0|135,1
+od_angle_channel=90,0|90,1
 
 [od_config.od_sampling]
 # how many samples should the ADC publish per second?
