write code for data sharing with pioreactor co.

--- a/config.example.ini
+++ b/config.example.ini
@@ -138,10 +138,15 @@ acc_variance=0.006
 obs_variance=0.0005
 
 
-[error_reporting]
-# This enables sending error logs back to us developers at Pioreactor. We can build a better
-# product with this enabled (switch to 1 to enable sending, 0 to disable any sending)
-send_to_Pioreactor_dot_com=0
+[data_sharing_with_pioreactor]
+# This enables sending error logs back to us developers at Pioreactor.
+# (switch to 1 to enable sending, 0 to disable any sending)
+send_errors_to_Pioreactor=0
+# This enables sending optical density statistics back to us developers at Pioreactor.
+# We use this data to fine tune the Pioreactor's statistical models.
+# (switch to 1 to enable sending, 0 to disable any sending)
+send_od_statistics_to_Pioreactor=0
+
 
 [timezone]
 # One of "TZ database name" in https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
