--- a/config.dev.ini
+++ b/config.dev.ini
@@ -1,8 +1,9 @@
 [PWM]
 # map the externals to the PWM
+# hardware PWM are available on channels 1 & 3.
 stirring=0
-alt_media=2
-waste=3
+alt_media=0
+waste=2
 heating=2
 media=4
 bubbler=1
@@ -25,9 +26,9 @@ samples_per_second=0.1
 
 
 [pump_calibration]
-media_ml_calibration={"duration_": 1}
-waste_ml_calibration={"duration_": 1}
-alt_media_ml_calibration={"duration_": 1}
+media_ml_calibration={"duration_": 1.0}
+waste_ml_calibration={"duration_": 1.0}
+alt_media_ml_calibration={"duration_": 1.0}
 
 [bioreactor]
 volume_ml=14
