really big update: close #126, close #125. Important topics are now json strings that contain ts, and other metadata

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -1,24 +1,19 @@
 [PWM]
 # map the externals to the PWM
 # hardware PWM are available on channels 1 & 3.
-stirring=0
-alt_media=0
-waste=2
-heating=2
-media=4
-bubbler=1
+0=stirring
+1=heating
+2=media
+3=alt_media
+4=waste
 
 [leds]
-ir_led=A
-white_light=B
+A=ir_led
+B=white_light
 
 
 [bubbler]
 duty_cycle=10
-
-[pd_inputs]
-pd_A=0
-pd_B=1
 
 
 [temperature_config.sampling]
@@ -37,7 +32,8 @@ volume_ml=14
 duty_cycle=50
 
 [od_config.photodiode_channel]
-od_angle_channel=135,0
+0=135,45
+1=90,135
 
 [od_config.od_sampling]
 # how many samples should the ADC publish per second?
@@ -61,6 +57,7 @@ ui_log_level=INFO
 [network.topology]
 leader_hostname=localhost
 
+
 [network.inventory]
 testing_unit=1
 localhost=1
@@ -83,9 +80,9 @@ Ki=0
 Kd=0
 
 [dosing_automation.pid_turbidostat]
-Kp=3
-Ki=0.1
-Kd=0.1
+Kp=0.05
+Ki=0.01
+Kd=0.01
 
 [temperature_automation.pid_stable]
 Kp=.01
