--- a/config.example.ini
+++ b/config.example.ini
@@ -3,15 +3,19 @@
 [PWM]
 # map the externals to the PWM.
 # hardware PWM are available on channels 1 & 3.
-stirring=0
-heating=1
-alt_media=2
-waste=3
-media=4
+0=stirring
+1=heating
+2=alt_media
+3=waste
+4=media
+
 
 [leds]
-# add labels in the UI, and access specific LEDs programmaticly. Ex: red=B or uv380=C
-ir_led=A
+# Specify LED channels, add labels in the UI, and access specific LEDs programmatically. Ex: B=red or C=uv380
+A=ir_led
+B=
+C=
+D=
 
 [pump_calibration]
 media_ml_calibration={"duration_": 1.0}
@@ -21,12 +25,12 @@ alt_media_ml_calibration={"duration_": 1.0}
 [stirring]
 
 [od_config.photodiode_channel]
-# Default photodiode channel to use, with its angle relative to the IR LED.
+# Default photodiode channel(s) to use, with its angle relative to the IR LED(s).
 # Only valid angles are one of {45,90,135,180}
-# Only allowable channels are one of {0,1}
-# Use a | character to separate them
-# Example: 135,0|135,1
-od_angle_channel=90,0|90,1
+# Only allowable channels are one of {0, 1}
+# If multiple angles (due to multiple IR LEDs), seperate left-hand side with commas, Ex: 0=90,45
+0=90
+1=90
 
 [od_config.od_sampling]
 # how many samples should the ADC publish per second?
@@ -85,6 +89,7 @@ url_alias=pioreactor.local
 
 
 [ui.overview.settings]
+# lookback_hours can be decimal values, too. Ex: 0.5 to represent 30 minutes.
 filtered_od_lookback_hours=6
 raw_od_lookback_hours=6
 
