--- a/config.example.ini
+++ b/config.example.ini
@@ -1,7 +1,7 @@
 # See documentation for this file at https://pioreactor.com/pages/configuration-via-config-ini
 
 [PWM]
-# map the externals to the PWM.
+# map the PWM channels to externals.
 # hardware PWM are available on channels 1 & 3.
 0=stirring
 1=heating
@@ -11,7 +11,7 @@
 
 
 [leds]
-# Specify LED channels, add labels in the UI, and access specific LEDs programmatically. Ex: B=red or C=uv380
+# Specify LED channels, add labels in the UI, and access specific LEDs programmatically. Ex: B=red_led, C=uv380
 A=ir_led
 B=
 C=
@@ -25,10 +25,10 @@ alt_media_ml_calibration={"duration_": 1.0}
 [stirring]
 
 [od_config.photodiode_channel]
-# Default photodiode channel(s) to use, with its angle relative to the IR LED(s).
+# Default IR photodiode channel(s) to use and its angle relative to the IR LED(s).
 # Only valid angles are one of {45,90,135,180}
 # Only allowable channels are one of {0, 1}
-# If multiple angles (due to multiple IR LEDs), seperate left-hand side with commas, Ex: 0=90,45
+# If multiple angles (due to multiple IR LEDs), separate left-hand side with commas, Ex: 0=90,45
 0=90
 1=90
 
