we are logging to MQTT from the UI, no need to have this set up anymore

--- a/system/systemd/start_pioreactorui.service
+++ b/system/systemd/start_pioreactorui.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=In case of an RPi power-cycle mid-experiment, start up PioreactorUI
+Description=Start up PioreactorUI
 Wants=network-online.target
 After=network-online.target
 
@@ -7,7 +7,6 @@ After=network-online.target
 User=pi
 ExecStartPre=sudo iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-ports 9000
 ExecStart=pm2 start app.js --name ui
-ExecStartPost=nohup sudo sh /home/pi/pioreactor/bash_scripts/push_ui_logs_to_mqtt.sh &
 WorkingDirectory=/home/pi/pioreactorui/backend
 Restart=no
 Environment="PATH=/home/pi/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin"
