--- a/system/systemd/start_pioreactorui.service
+++ b/system/systemd/start_pioreactorui.service
@@ -6,7 +6,7 @@ After=network-online.target
 [Service]
 User=pi
 ExecStartPre=sudo iptables -t nat -A PREROUTING -p tcp --dport 80 -j REDIRECT --to-ports 9000
-ExecStart=pm2 start app.js --name ui
+ExecStart=pm2 start app.js --name ui --time
 WorkingDirectory=/home/pi/pioreactorui/backend
 Restart=no
 Environment="PATH=/home/pi/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin"
