not happy with the kalman filter anymore

--- a/config.example.ini
+++ b/config.example.ini
@@ -133,9 +133,10 @@ pd_Y=
 
 
 [growth_rate_kalman]
-# lower acc_variance to make the growth rate less sensitive
-acc_variance=0.006
-obs_variance=0.0005
+# lower acc_std to make the growth rate less sensitive
+acc_std=0.005
+obs_std=0.022
+od_std=0.00001
 
 
 [data_sharing_with_pioreactor]
