change KF a bit based on results

--- a/config.example.ini
+++ b/config.example.ini
@@ -88,6 +88,9 @@ url_alias=pioreactor.local
 filtered_od_lookback_hours=6
 raw_od_lookback_hours=6
 
+# instead of hourly growth rate, plot doubling time by setting the below to 1.
+doubling_time=0
+
 [ui.overview.charts]
 # show/hide charts on the PioreactorUI dashboard
 # 1 is show, 0 is hide
@@ -133,10 +136,11 @@ pd_Y=
 
 
 [growth_rate_kalman]
-# lower acc_std to make the growth rate less sensitive
-acc_std=0.005
-obs_std=0.022
-od_std=0.00001
+# lower acc_std to make the growth rate smoother
+acc_std=0.075
+obs_std=0.03
+od_std=0.1
+rate_std=0.05
 
 
 [data_sharing_with_pioreactor]
