growth rate calc now uses internal timestamp, so it should be more robust to networking problems

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -91,6 +91,7 @@ Kd=.01
 
 
 [growth_rate_kalman]
-rate_variance=0.0005
-acc_variance=0.01
-obs_variance=1e-5
+acc_std=0.075
+obs_std=0.03
+od_std=0.1
+rate_std=0.05
