--- a/system/systemd/avahi-alias.service
+++ b/system/systemd/avahi-alias.service
@@ -5,6 +5,7 @@ Description=Publish an alias for %H.local via mdns
 Type=simple
 ExecStart=/bin/bash -c "/usr/bin/avahi-publish -a -R $(crudini --get /home/pi/.pioreactor/config.ini ui url_alias) $(avahi-resolve -4 -n %H.local | cut -f 2)"
 Restart=always
+RuntimeMaxSec=14400
 RestartSec=30
 
 [Install]
