--- a/config.dev.ini
+++ b/config.dev.ini
@@ -3,16 +3,18 @@
 # hardware PWM are available on channels 1 & 3.
 0=stirring
 1=heating
-2=media
 3=alt_media
 4=waste
+2=air_bubbler
 
 [leds]
 A=ir_led
 B=white_light
 
 
-[bubbler]
+
+[air_bubbler]
+# this should be tuned to produce modest bubbles
 duty_cycle=10
 
 
