--- a/config.example.ini
+++ b/config.example.ini
@@ -33,11 +33,8 @@ alt_media_ml_calibration={"duration_": 1.0}
 1=90
 
 [od_config.od_sampling]
-# how many samples should the ADC publish per second?
+# how many optical density measurements should be published per second? Recommended maximum is 1.
 samples_per_second=0.2
-
-# how fast should we sample the ADC? See ADS1x15 datasheet
-data_rate=8
 
 # default intensity of IR LED. Integer between 0 and 100
 ir_intensity = 95
@@ -80,7 +77,7 @@ leader_address=
 # the UI will be available at the below alias, along with <leader_hostname>.local
 # note - it must end in .local, and subdomains are not allowed.
 # requires a reboot after changing.
-url_alias=pioreactor.local
+domain_alias=pioreactor.local
 
 
 [ui.overview.settings]
