adding monitor tests; fix annoying logging.disable problem that was hiding all logs from me

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -53,7 +53,7 @@ log_file=./pioreactor.log
 
 # See Python's logging module for possible values
 #TODO: move this to another section
-ui_log_level=INFO
+ui_log_level=DEBUG
 
 [network.topology]
 leader_hostname=localhost
