--- a/config.dev.ini
+++ b/config.dev.ini
@@ -90,6 +90,16 @@ Kp=.01
 Ki=.01
 Kd=.01
 
+[data_sharing_with_pioreactor]
+# This enables sending error logs back to us developers at Pioreactor.
+# (switch to 1 to enable sending, 0 to disable any sending)
+send_errors_to_Pioreactor=0
+# This enables sending optical density statistics back to us developers at Pioreactor.
+# We use this data to fine tune the Pioreactor's statistical models.
+# (switch to 1 to enable sending, 0 to disable any sending)
+send_od_statistics_to_Pioreactor=0
+
+
 
 [growth_rate_kalman]
 acc_std=0.075
