need requests for post to cloud; however it's already installed by another package

--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,6 +1,7 @@
-click
-paho-mqtt
-psutil
-sh
-JSON-log-formatter
+click==8.0.1
+paho-mqtt==1.5.1
+psutil==5.8.0
+sh==1.14.2
+JSON-log-formatter==0.4.0
 importlib_metadata
+requests
