adding more IR information to logging to cloud

--- a/config.example.ini
+++ b/config.example.ini
@@ -24,6 +24,11 @@ alt_media_ml_calibration={"duration_": 1.0}
 
 [stirring]
 
+
+[od_config]
+# change the LED to the part number you are using. This improves the temperature compensation.
+ir_led_part_number=IR333-A
+
 [od_config.photodiode_channel]
 # Default IR photodiode channel(s) to use and its angle relative to the IR LED(s).
 # Only valid angles are one of {45,90,135,180}
