--- a/config.dev.ini
+++ b/config.dev.ini
@@ -2,10 +2,10 @@
 # map the externals to the PWM
 # hardware PWM are available on channels 1 & 3.
 0=stirring
+2=media
 1=heating
 3=alt_media
 4=waste
-2=air_bubbler
 
 [leds]
 A=ir_led
