--- a/requirements/requirements_worker.txt
+++ b/requirements/requirements_worker.txt
@@ -1,9 +1,9 @@
 -r requirements.txt
 RPi.GPIO
-adafruit-circuitpython-ads1x15
-simple-pid
-DAC43608
-TMP1075
+adafruit-circuitpython-ads1x15===2.2.8
+simple-pid==1.0.1
+DAC43608==0.2.6
+TMP1075==0.2.0
 rpi-hardware-pwm==0.1.3
 
 # numpy as well, but that's installed elsewhere
