--- a/requirements/requirements_worker.txt
+++ b/requirements/requirements_worker.txt
@@ -5,5 +5,6 @@ simple-pid==1.0.1
 DAC43608==0.2.6
 TMP1075==0.2.0
 rpi-hardware-pwm==0.1.3
+pytest==6.2.5
 
 # numpy as well, but that's installed elsewhere
