first test with stirring

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -31,7 +31,13 @@ alt_media_ml_calibration={"duration_": 1.0}
 volume_ml=14
 
 [stirring]
-duty_cycle=50
+target_rpm=500
+
+[stirring.pid]
+Kp=10.0
+Ki=0.0
+Kd=0.0
+
 
 [od_config.photodiode_channel]
 1=135,45
