adding back the rest of the PID parameters

--- a/config.example.ini
+++ b/config.example.ini
@@ -20,11 +20,13 @@ D=
 
 [stirring]
 target_rpm=500
+initial_duty_cycle=60
 
 
 [stirring.pid]
-# only P is used, due to the implementation.
 Kp=0.015
+Ki=0
+Kd=0
 
 
 
