adding tests and alerts for a nil OD signal

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -51,6 +51,9 @@ samples_per_second=0.2
 data_rate=8
 ir_intensity=90
 
+[od_config]
+# change the LED to the part number you are using. This improves the temperature compensation.
+ir_led_part_number=IR333-A
 
 [storage]
 database=pioreactor.sqlite3
