remove temperature calibration, and introduce LED output

--- a/config.example.ini
+++ b/config.example.ini
@@ -33,6 +33,14 @@ Kd=0
 [od_config]
 # change the LED to the part number you are using. This improves the temperature compensation.
 ir_led_part_number=IR333-A
+# how many optical density measurements should be published per second? Recommended maximum is 1.
+samples_per_second=0.2
+
+# default intensity of IR LED. Integer between 0 and 100
+ir_intensity = 95
+
+# 1 or 2
+ir_led_output_channel=1
 
 [od_config.photodiode_channel]
 # Default IR photodiode channel(s) to use and its angle relative to the IR LED(s).
@@ -41,13 +49,6 @@ ir_led_part_number=IR333-A
 # If multiple angles (due to multiple IR LEDs), separate left-hand side with commas, Ex: 1=90,45
 1=90
 2=90
-
-[od_config.od_sampling]
-# how many optical density measurements should be published per second? Recommended maximum is 1.
-samples_per_second=0.2
-
-# default intensity of IR LED. Integer between 0 and 100
-ir_intensity = 95
 
 
 [bioreactor]
