--- a/config.dev.ini
+++ b/config.dev.ini
@@ -43,17 +43,18 @@ Kd=0.0
 [od_config.photodiode_channel]
 1=135,45
 
-[od_config.od_sampling]
+[od_config]
 # how many samples should the ADC publish per second?
 samples_per_second=0.2
 
-# how fast should we sample the ADC? See ADS1x15 datasheet
-data_rate=8
+
 ir_intensity=90
 
-[od_config]
 # change the LED to the part number you are using. This improves the temperature compensation.
 ir_led_part_number=IR333-A
+
+# 1 or 2
+ir_led_output_channel=2
 
 [storage]
 database=pioreactor.sqlite3
