fix time stamp in pio logs

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -54,7 +54,7 @@ ir_intensity=90
 ir_led_part_number=IR333-A
 
 # 1 or 2
-ir_led_output_channel=2
+ir_led_output_channel=
 
 [storage]
 database=pioreactor.sqlite3
