changing db location to /home/pi/.pioreactor/storage, and putting other dbs there

--- a/config.example.ini
+++ b/config.example.ini
@@ -56,7 +56,7 @@ volume_ml=14
 
 [storage]
 # the UI looks here, too.
-database=/home/pi/.pioreactor/pioreactor.sqlite
+database=/home/pi/.pioreactor/storage/pioreactor.sqlite
 
 [logging]
 # where, on each Rpi, to store the logs
