lots of types; use REF in config

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -41,7 +41,8 @@ Kd=0.0
 
 
 [od_config.photodiode_channel]
-1=135,45
+1=45
+2=REF
 
 [od_config]
 # how many samples should the ADC publish per second?
@@ -51,9 +52,6 @@ samples_per_second=0.2
 ir_intensity=90
 
 # change the LED to the part number you are using. This improves the temperature compensation.
-
-# 1 or 2
-ir_led_output_channel=
 
 [storage]
 database=pioreactor.sqlite3
