--- a/config.example.ini
+++ b/config.example.ini
@@ -37,16 +37,15 @@ samples_per_second=0.2
 # default intensity of IR LED. Integer between 0 and 100
 ir_intensity = 95
 
-# 1 or 2
-ir_led_output_channel=1
 
 [od_config.photodiode_channel]
-# Default IR photodiode channel(s) to use and its angle relative to the IR LED(s).
+# Default IR photodiode channel(s) to use and its angle relative to the IR LED(s),
+# OR choose the reference photodiode using the keyword REF.
 # Only valid angles are one of {45,90,135,180}
 # Only allowable channels are one of {1, 2}
 # If multiple angles (due to multiple IR LEDs), separate left-hand side with commas, Ex: 1=90,45
 1=90
-2=90
+2=REF
 
 
 [bioreactor]
