--- a/config.example.ini
+++ b/config.example.ini
@@ -11,8 +11,9 @@
 
 
 [leds]
-# Specify LED channels, add labels in the UI, and access specific LEDs programmatically. Ex: B=red_led, C=uv380
-A=ir_led
+# Specify LED channels, add labels in the UI, and access specific LEDs programmatically. Ex: A=ir, B=red, C=uv380.
+# To measure optical density, atleast one LED channel should be `ir`.
+A=ir
 B=
 C=
 D=
