--- a/config.example.ini
+++ b/config.example.ini
@@ -88,8 +88,8 @@ domain_alias=pioreactor.local
 filtered_od_lookback_hours=48
 raw_od_lookback_hours=48
 
-# instead of hourly growth rate, plot doubling time by setting the below to 1.
-doubling_time=0
+# To display the daily growth rate (instead of hourly), set this to 1 (and 0 to use hourly, the default)
+daily_growth_rate=0
 
 [ui.overview.charts]
 # show/hide charts on the PioreactorUI dashboard
