some fixes to stirring, docs to od_reading, remove derivative filter from pid_stable as I don't think it's working

--- a/config.example.ini
+++ b/config.example.ini
@@ -11,9 +11,9 @@
 
 
 [leds]
-# Specify LED channels, add labels in the UI, and access specific LEDs programmatically. Ex: A=ir, B=red, C=uv380.
-# To measure optical density, atleast one LED channel should be `ir`.
-A=ir
+# Specify LED channels, add labels in the UI, and access specific LEDs programmatically. Ex: A=IR, B=red, C=UV380.
+# To measure optical density, atleast one LED channel should be `IR`.
+A=IR
 B=
 C=
 D=
