--- a/requirements/requirements_worker.txt
+++ b/requirements/requirements_worker.txt
@@ -1,6 +1,6 @@
 RPi.GPIO==0.7.0
 adafruit-circuitpython-ads1x15===2.2.8
-simple-pid @ git+https://github.com/pioreactor/simple-pid.git
+simple-pid==1.0.1
 DAC43608==0.2.6
 TMP1075==0.2.0
 rpi-hardware-pwm==0.1.3
