--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: Install
         run: |
           pip install -e .
-          pip install -r requirements_dev.txt
+          pip install -r requirements/requirements_dev.txt
 
       - name: Run tests
         run: pytest pioreactor/tests/
