--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,3 +34,11 @@ repos:
     hooks:
     -   id: mypy
         additional_dependencies: [types-requests]
+
+-   repo: https://github.com/asottile/reorder_python_imports
+    rev: v2.6.0
+    hooks:
+    -   id: reorder-python-imports
+        args:
+          - --add-import
+          - from __future__ import annotations
