--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
     -   id: check-added-large-files
 
 -   repo: https://github.com/ambv/black
-    rev: 21.10b0
+    rev: 22.1.0
     hooks:
     - id: black
       args: ["--line-length", "90"]
