--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,6 +41,8 @@ jobs:
            import click
            from pioreactor.background_jobs.base import BackgroundJob
 
+           __plugin_version__ = "0.0.1"
+
            class ExamplePlugin(BackgroundJob):
 
               def __init__(self):
