adding random order to pytest, passing through unit and experiment into loggers and pwm

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,4 +55,4 @@ jobs:
            EOT
 
       - name: Run tests
-        run: pytest pioreactor/tests/ -vv --timeout 600
+        run: pytest pioreactor/tests/ -vv --timeout 600 --random-order
