--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,10 +30,9 @@ repos:
         # https://flake8.pycqa.org/en/latest/user/error-codes.html
         - "--ignore=E203,E266,E501,W503,E402,E401"
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v0.910-1'  # Use the sha / tag you want to point at
+    rev: 'v0.931'  # Use the sha / tag you want to point at
     hooks:
     -   id: mypy
-        additional_dependencies: [types-requests]
 
 -   repo: https://github.com/asottile/reorder_python_imports
     rev: v2.6.0
