--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,3 +56,5 @@ jobs:
 
       - name: Run tests
         run: pytest pioreactor/tests/ -vv --timeout 600 --random-order
+        env:
+          TESTING: 1
