adding config for pd ir ref ema, fixing od blank pub to db

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -48,10 +48,9 @@ Kd=0.0
 # how many samples should the ADC publish per second?
 samples_per_second=0.2
 
+pd_reference_ema=0.4
 
 ir_intensity=90
-
-# change the LED to the part number you are using. This improves the temperature compensation.
 
 [storage]
 database=pioreactor.sqlite3
