--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 experiments/
 jupyter_notebooks/
 .pioreactor/
+plugins_dev
+*.sqlite3
+*.sqlite
+*.ini
+*.log
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -59,18 +65,6 @@ coverage.xml
 *.mo
 *.pot
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
 
 # Sphinx documentation
 docs/_build/
