network -> cluster in config.ini

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -62,12 +62,12 @@ log_file=./pioreactor.log
 #TODO: move this to another section
 ui_log_level=DEBUG
 
-[network.topology]
+[cluster.topology]
 leader_hostname=localhost
 leader_address=localhost
 
 
-[network.inventory]
+[cluster.inventory]
 testing_unit=1
 localhost=1
 pioreactor2=1
