specify tmp dir in github actions

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,3 +58,4 @@ jobs:
         run: pytest pioreactor/tests/ -vv --timeout 600 --random-order
         env:
           TESTING: 1
+          TMPDIR: /tmp/
