See changelog. Basically, because we have ods that are not voltages, we need to refactor a bunch of things

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -54,6 +54,9 @@ ir_led_intensity=90
 
 local_ac_hz=60
 
+# use the most recent calibration file, if available
+use_calibration=1
+
 [storage]
 database=pioreactor.sqlite3
 
