--- a/config.dev.ini
+++ b/config.dev.ini
@@ -56,7 +56,7 @@ ir_led_intensity=90
 use_calibration=1
 
 [storage]
-database=pioreactor.sqlite3
+database=:memory:
 
 [logging]
 log_file=./pioreactor.log
