--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postbuild": "cp -R build/* ../pioreactorui"
+    "postbuild": "rm -rf ../pioreactorui/static rm ../pioreactorui/precache-manifest* && cp -R build/* ../pioreactorui"
   },
   "eslintConfig": {
     "extends": "react-app"
