--- a/config.dev.ini
+++ b/config.dev.ini
@@ -5,7 +5,7 @@
 3=media
 2=heating
 4=alt_media
-5=demo
+5=waste
 
 [leds]
 A=IR
@@ -56,7 +56,7 @@ ir_led_intensity=90
 use_calibration=1
 
 [storage]
-database=:memory:
+database=pioreactor.sqlite
 
 [logging]
 log_file=./pioreactor.log
