--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
           python-version: 3.9
       - name: 🏗 Install build dependencies
         run: |
-          python -m pip install wheel --user
+          python -m pip install wheel build --user
       - name: 🔨 Build a binary wheel and a source tarball
         run: |
           python -m build --wheel
@@ -43,6 +43,7 @@ jobs:
     name: 📦 Publish tagged releases to PyPI
     if: github.event_name == 'release' && github.repository == 'Pioreactor/pioreactor'
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: ⬇ Download build result
         uses: actions/download-artifact@v1
@@ -58,6 +59,7 @@ jobs:
     name: 📧 Notify Pioreactor/CustoPizer
     if: github.event_name == 'release' && github.repository == 'Pioreactor/pioreactor'
     runs-on: ubuntu-latest
+    needs: publish-on-pypi
     steps:
       - name: 👀 Determine version
         run: |
