--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,6 +38,8 @@ jobs:
 
 
   publish-on-pypi:
+    # skip this, always, as we can't upload pioreactor to PyPI, see https://github.com/pypi/warehouse/issues/9404 (specifically our sqlite3worker package.)
+    if: (1==0)
     name: 📦 Publish tagged releases to PyPI
     runs-on: ubuntu-latest
     needs: build
@@ -55,7 +57,7 @@ jobs:
   notify-custopizer-build:
     name: 📧 Notify Pioreactor/CustoPizer
     runs-on: ubuntu-latest
-    needs: publish-on-pypi
+    needs: build
     steps:
       - name: 👀 Determine version
         run: |
@@ -64,6 +66,6 @@ jobs:
         uses: peter-evans/repository-dispatch@v1
         with:
           token: ${{ secrets.REPODISPATCH_TOKEN }}
-          repository: Pioreactor/pioreactor-UpToDate
+          repository: Pioreactor/CustoPizer
           event-type: pioreactor_release
           client-payload: '{"version": "${{ env.PIOREACTOR_VERSION }}"}'
