--- a/config.dev.ini
+++ b/config.dev.ini
@@ -27,7 +27,13 @@ samples_per_second=0.1
 
 
 [bioreactor]
-volume_ml=14
+# max_volume_ml is determined by the volume that just touches the outflow tube. I.e. if you
+# where to keep running the waste pump, what would the stable volume be.
+# see docs
+max_volume_ml=14
+initial_volume_ml=14
+initial_alt_media_fraction=0.0
+
 
 [stirring]
 target_rpm=500
