adding config for cli log setting

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -3,9 +3,9 @@
 # hardware PWM are available on channels 1 & 3.
 1=stirring
 3=media
-2=heating
+2=waste
 4=alt_media
-5=waste
+5=heating
 
 [leds]
 A=IR
@@ -13,8 +13,6 @@ B=white_light
 C=
 D=
 
-[heating]
-address=79
 
 
 [air_bubbler]
@@ -70,6 +68,7 @@ log_file=./pioreactor.log
 # See Python's logging module for possible values
 #TODO: move this to another section
 ui_log_level=DEBUG
+console_log_level=DEBUG
 
 [cluster.topology]
 leader_hostname=localhost
