--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-bootstrap": "^1.3.0",
     "react-codeflask": "0.0.5",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "6.8.0",
     "react-scripts": "^3.4.3",
     "react-showdown": "^2.3.1",
     "victory": "^35.11.4"
