--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,3 +59,12 @@ jobs:
         env:
           TESTING: 1
           TMPDIR: /tmp/
+
+      - name: Test cli
+        run: |
+          pio
+          pio update app
+          pio run example_plugin
+        env:
+          TESTING: 1
+          TMPDIR: /tmp/
