--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,7 +55,7 @@ jobs:
            EOT
 
       - name: Run tests
-        run: pytest pioreactor/tests/ -vv --timeout 600 --random-order
+        run: pytest pioreactor/tests/ -vv --timeout 600 --random-order --durations 15
         env:
           TESTING: 1
           TMPDIR: /tmp/
