--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,7 +63,7 @@ jobs:
       - name: Test cli
         run: |
           pio
-          pio update app
+          pio update app -b develop
           pio run example_plugin
         env:
           TESTING: 1
