--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,7 @@ repos:
         # check out their meaning here
         # https://flake8.pycqa.org/en/latest/user/error-codes.html
         - "--ignore=E203,E266,E501,W503,E402,E401"
+        - "--per-file-ignores=*/__init__.py: F401"
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v1.0.0'  # Use the sha / tag you want to point at
