update scripts; new calibration design

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,6 +35,10 @@ repos:
     rev: 'v1.1.1'  # Use the sha / tag you want to point at
     hooks:
     -   id: mypy
+        additional_dependencies: [
+            msgspec==0.13.0
+        ]
+
 
 -   repo: https://github.com/asottile/reorder_python_imports
     rev: v2.6.0
