why isn't mypy working

--- a/config.dev.ini
+++ b/config.dev.ini
@@ -73,7 +73,7 @@ console_log_level=DEBUG
 
 [cluster.topology]
 leader_hostname=localhost
-leader_address=localhost:4999
+leader_address=localhost
 
 
 [cluster.inventory]
