--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,11 +32,12 @@ repos:
         - "--per-file-ignores=*/__init__.py: F401"
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.2.0'  # Use the sha / tag you want to point at
+    rev: 'v1.4.1'  # Use the sha / tag you want to point at
     hooks:
     -   id: mypy
         additional_dependencies: [
-            msgspec==0.16.0
+            msgspec==0.16.0,
+            types-pkg_resources==0.1.3
         ]
 
 
