--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,7 +37,8 @@ repos:
     -   id: mypy
         additional_dependencies: [
             msgspec==0.16.0,
-            types-pkg_resources==0.1.3
+            types-pkg_resources==0.1.3,
+            types-paho-mqtt==1.6.0.6
         ]
 
 
