--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^1.3.0",
     "react-codeflask": "0.0.5",
     "react-dom": "^17.0.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "6.8.0",
     "react-scripts": "^3.4.3",
     "react-showdown": "^2.3.1",
