--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,6 +37,7 @@ jobs:
           file_glob: true
 
   zip-asset-upload:
+    name: 🤐 Zip assets
     runs-on: ubuntu-latest
     needs: build
     steps:
