new test to test importing automation works. It needs to be it's own test since the other test files mess with imports and state and caches

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,7 +56,9 @@ jobs:
            EOT
 
       - name: Run tests
-        run: pytest pioreactor/tests/ -vv --timeout 600 --random-order --durations 15
+        run:  |
+          pytest pioreactor/tests/ -vv --timeout 600 --random-order --durations 15
+          pytest pioreactor/tests/test_automation_imports.py
         env:
           TESTING: 1
           TMPDIR: /tmp/
