--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,33 +36,81 @@ jobs:
           overwrite: true
           file_glob: true
 
+  build-deps:
+    name: 🔨 Build dependencies
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: 🏗 Set up Python 3.9
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.9
+      - name: 🏗 Install build dependencies
+        run: |
+          python -m pip install wheel build --user
+      - name: 🔨 Build wheels for all dependencies
+        run: |
+          pip wheel . -w wheels -r requirements/requirements_dev.txt
+      - name: Zip the wheels
+        run: |
+          cd wheels
+          zip -r ../wheels_${{ github.event.release.tag_name }}.zip .
+      - name: Upload zipped assets
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: wheels_${{ github.event.release.tag_name }}.zip
+          tag: ${{ github.ref }}
+          overwrite: true
+
+  upload-ui:
+    name: Upload UI tarball
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup jq
+        run: sudo apt-get install -y jq
+      - name: Download UI tarball
+        run: |
+          latest_release=$(curl -s https://api.github.com/repos/pioreactor/pioreactorui/releases/latest | jq --raw-output '.tag_name')
+          wget https://github.com/pioreactor/pioreactorui/archive/refs/tags/$latest_release.tar.gz -O pioreactorui_$latest_release.tar.gz
+      - name: Upload zipped assets
+        uses: svenstaro/upload-release-action@v2
+        with:
+          file_glob: true
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: pioreactorui_*.tar.gz
+          tag: ${{ github.ref }}
+          overwrite: true
+
   zip-asset-upload:
     name: 🤐 Zip assets
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, upload-ui, build-deps]
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-    - name: Download release assets
-      run: |
-        curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r '.assets[].browser_download_url' > assets.txt
-        mkdir release_assets
-        cd release_assets
-        while read -r line; do
-          echo "$line"
-          wget "$line"
-        done < ../assets.txt
-    - name: Zip the assets
-      run: |
-        cd release_assets
-        zip -r ../release_${{ github.event.release.tag_name }}.zip .
-    - name: Upload zipped assets
-      uses: svenstaro/upload-release-action@v2
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: release_${{ github.event.release.tag_name }}.zip
-        tag: ${{ github.ref }}
-        overwrite: true
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Download release assets
+        run: |
+          curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r '.assets[].browser_download_url' > assets.txt
+          mkdir release_assets
+          cd release_assets
+          while read -r line; do
+            echo "$line"
+            wget "$line"
+          done < ../assets.txt
+      - name: Zip the assets
+        run: |
+          cd release_assets
+          zip -r ../release_${{ github.event.release.tag_name }}.zip .
+      - name: Upload zipped assets
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: release_${{ github.event.release.tag_name }}.zip
+          tag: ${{ github.ref }}
+          overwrite: true
 
   publish-on-pypi:
     name: 📦 Publish tagged releases to PyPI
