--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -66,7 +66,7 @@ jobs:
           overwrite: true
 
   upload-ui:
-    name: Upload UI tarball
+    name: ⤵️ Fetch UI tarball
     runs-on: ubuntu-latest
     steps:
       - name: Setup jq
@@ -93,7 +93,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Download release assets
         run: |
-          curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r '.assets[].browser_download_url' > assets.txt
+          curl -s https://api.github.com/repos/pioreactor/pioreactor/releases/tags/${{ github.event.release.tag_name }} | jq -r '.assets[].browser_download_url' > assets.txt
           mkdir release_assets
           cd release_assets
           while read -r line; do
