don't build the wheels, just download them from the piwheels repo

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,7 +52,7 @@ jobs:
           python -m pip install wheel build --user
       - name: 🔨 Build wheels for all dependencies
         run: |
-          pip wheel . -w wheels -r requirements/requirements_dev.txt
+          pip download . -d wheels -r requirements/requirements_dev.txt --index-url https://piwheels.org/simple --platform linux_armv7l --platform linux_armv6l --platform manylinux_2_36_armv7l --only-binary=:all: --extra-index-url https://pypi.org/simple
       - name: Zip the wheels
         run: |
           cd wheels
